--- a/resources/css/grid.css
+++ b/resources/css/grid.css
@@ -6,25 +6,19 @@
     border-spacing:0;
     border-collapse:collapse;
     clear:both;
+    font-size: 11px;
 }
 
 .grid input[type=submit]{
-    border:0;
-    background-color: #000000;
-    color:#FFF;
-    cursor:pointer;
-    text-align:center;
-    font-size:16px;
-    float:left;
+    font-family: Verdana, Arial, Helvetica, sans-serif; 
+    color: #000; 
+    height: 21px; 
+    margin: 4px 0; background: #fff; border-style: none; cursor:pointer; border-radius:2px;
 }
 
-.grid select{
-    font-size:16px;
-}
+.grid select{}
 
-.grid .grid-name{
-    font-size: 26px;
-}
+.grid .grid-name{}
 
 .grid .grid-upper-panel{
     color: #FFF;
@@ -44,16 +38,15 @@
 }
 
 .grid .grid-results{
-    background-color: #000;
-    height: 19px;
-    padding: 3px 10px;
-    margin-left:28px;
+	background-color: #3D9B35;
+	height: 19px;
+	line-height: 18px;
+	padding: 3px 10px;
+	margin-left: 28px;
  }
 
 .grid th.grid-head-column{
-    background-color: #e8e8e8;
     height: 30px;
-    font-size: 16px;
     padding: 0px 10px;
     text-align:left;
 }
@@ -61,19 +54,20 @@
 .grid th.grid-head-column a{
     text-decoration:none;
     color:#000;
+    float:left;
 }
 
 .grid tr.grid-row-odd{
-    background-color:#FFF;
+    background-color:#E5F2FA;
 }
 
 .grid tr.grid-row-even{
-    background-color:#f8f8f8;
+    background-color:#fff;
 }
 
 .grid tr td.grid-row-cell{
     height: 30px;
-    font-size: 14px;
+    
     padding:0px 10px 0px 10px;
     border-right:1px solid #f2f2f2;
     border-bottom: 1px solid #f2f2f2;
@@ -87,7 +81,7 @@
     display: inline-block;
     width: 10px;
     height: 15px;
-    margin-top: 3px;
+    margin-top: -1px;
     position: absolute;
     margin-left: 5px;
 }
@@ -116,37 +110,35 @@
 }
 
 .grid .grid-bottom{
-    background:#e8e8e8;
-    height:30px;
-    padding:0px 10px;
+	background: url(/style/images/back-blue.png) left repeat-x;
+	color: white;
+	height: 30px;
 }
 
 .grid .grid-action-box{
     float:left;
+    margin-left: 4px;
+	margin-top: 4px;
 }
 
 .grid .grid-action-box label{
     float: left;
-    font-size: 14px;
-    line-height: 30px;
+    line-height: 21px;
     margin-right: 10px;
 }
 
 .grid .grid-action-box input[type="submit"]{
-    height: 26px;
     width: 75px;
-    margin-top: 2px;
-    padding-bottom: 2px;
+    margin-top: 0;
+    font-size:11px;
 }
 
 .grid .grid-action-box select{
     float: left;
-    width: 170px;
     margin-right: 5px;
-    margin-top: 2px;
-    height: 26px;
-    font-size: 16px;
+	height: 21px;
     border: 1px solid #ccc;
+    font-size: 11px;
 }
 
 .grid .grid-perPage{
@@ -155,21 +147,18 @@
 
 .grid .grid-perPage label{
     float: left;
-    font-size: 14px;
-    line-height: 30px;
+    line-height: 21px;
     margin-right: 10px;
 }
 
 .grid .grid-perPage select{
     float: left;
     width: 75px;
-    height: 26px;
-    margin-top: 2px;
     border: 1px solid #ccc;
+    font-size:11px;
 }
 
 .grid .grid-perPage input[type="submit"]{
-    height: 26px;
     width: 30px;
     padding-bottom: 2px;
     margin-top: 2px;
@@ -185,7 +174,6 @@
 .grid .grid-paginator a, .grid-paginator span {
     color: #999;
     background-color: #e8e8e8;
-    font-size: 16px;
     display:inline-block;
     height:18px;
     line-height: 20px;
@@ -194,7 +182,7 @@
 
 .grid .grid-paginator a {
     color: #FFF;
-    background-color: #000;
+    background-color: #3D9B35;
     text-decoration: none;
     display:inline-block;
     height:18px;
@@ -212,13 +200,13 @@
 }
 
 .grid .grid-filter-form{
-    background-color:#ccc;
-    padding:0px 10px;
-    height:34px;
+	background: url(/style/images/back-blue.png) left repeat-x;
+	color: white;
+	height: 30px;
 }
 
-.grid .grid-filter-form-active{
-    background-color: #0078ff;
+.grid .grid-filter-form-active.grid-filter-form input[type="text"]{
+    background-color: #E5F2FA;
 }
 
 .grid .grid-filter-form input[type="text"]{
@@ -228,28 +216,29 @@
     background-color:#FFF;
     padding:0px;
     border:0;
-    font-size:16px;
 }
 
 .grid .grid-filter-form select{
     width:100%;
     border: 1px solid #ccc;
     height:26px;
-    font-size:16px;
 }
 
 .grid .grid-filter-form input[type="submit"]{
     height:24px;
     width:70px;
     margin-right:1px;
+    float:left;
 }
 
 .grid .grid-filter-reset{
-    width:24px;
-    height:24px;
-    background: url('images/cancel_white.png') no-repeat #0078ff 3px;
-    display:block;
-    margin-left:71px;
+	width: 24px;
+	height: 24px;
+	background: url('images/cancel_white.png') no-repeat #0078ff 3px;
+	display: block;
+	margin-left: 72px;
+	margin-top: 4px;
+	margin-right: 4px;
 }
 
 .grid .grid-datepicker{
@@ -265,7 +254,6 @@
 .grid .grid-button{
     min-width: 24px;
     min-height: 22px;
-    display: block;
     float: left;
 }
 
@@ -277,7 +265,6 @@
     text-align:left;
     list-style:none;
     margin-left:10px;
-    font-size:14px;
 }
 
 .grid input[type="text"].grid-editable{
@@ -286,7 +273,6 @@
     width:100%;
     background-color:#FFF;
     border: 1px solid #ccc;
-    font-size:14px;
 }
 
 .grid input[type="submit"].grid-editable{
@@ -307,7 +293,6 @@
     width:100%;
     height:25px;
     border: 1px solid #ccc;
-    font-size:14px;
 }
 
 .grid .grid-edited-cell{
@@ -323,6 +308,11 @@
 
 .grid .grid-add-row{
     background: url('images/add.png') no-repeat 4px;
+}
+.grid .grid-sum-row{
+	background-color: #3186BB;
+	color: white;
+	font-weight: 800;
 }
 
 .grid-flash{
