--- a/templates/grid.latte
+++ b/templates/grid.latte
@@ -8,7 +8,6 @@
 * @link		http://addons.nette.org/cs/niftygrid
 */
 *}
-{pack "NiftyGrid"}
 {snippet}
 {if !$control->isSubGrid}
 {$control['gridForm']->render('begin')}
@@ -49,6 +48,14 @@
 		</tr>
 		<tr>
 			<th n:if="$control->hasActionForm()" style="text-align:center; width: 16px;" class="grid-head-column"><input type="checkbox" class="grid-select-all" title="Označiť/odznačiť všetky záznamy"></th>
+			<th n:if="$control->hasLineNumber()" class="grid-head-column">
+				{var $lineNumber = 0}
+				{if $paginate} 
+					{if (boolean)$results}
+						{var $lineNumber = --$viewedFrom}
+					{/if}
+				{/if}				
+			</th>
 			<th n:foreach="$subGrids as $subGrid" style="width: 26px;" class="grid-head-column"></th>
 			<th n:foreach="$columns as $column" n:attr="style => $column->width ? 'width: '.$column->width.';'" class="grid-head-column">{if $control->hasEnabledSorting() && $column->isSortable()}{var $order = ($control->order == $column->name.' ASC') ? " DESC" : " ASC"}<a n:href="this, 'order' => $column->name.$order" class="grid-ajax" title="Obrátiť radenie">{$column->label}</a>{else}{$column->label}{/if}
 				<div class="grid-order" n:if="$column->isSortable() && $control->hasEnabledSorting()">
@@ -60,6 +67,7 @@
 		</tr>
 		<tr n:if="$control->hasFilterForm()">
 			<th n:if="$control->hasActionForm()" class="grid-filter-form"></th>
+			<th n:if="$control->hasLineNumber()" class="grid-filter-form"></th>
 			<th n:foreach="$subGrids as $subGrid" class="grid-filter-form"></th>
 			<th n:foreach="$columns as $column" n:attr="class => array(grid-filter-form, $control->isSpecificFilterActive($column->name) ? grid-filter-form-active)">
 				{if $column->hasFilter()}
@@ -72,6 +80,7 @@
 	<tbody>
 		<tr n:if="$control->showAddRow && $control->isEditable()">
 			<td n:if="$control->hasActionForm()" class="grid-row-cell grid-edited-cell"></td>
+			<td n:if="$control->hasLineNumber()" class="grid-filter-form"></td>
 			<td n:if="count($subGrids)" colspan="count($subGrids)" class="grid-row-cell grid-edited-cell"></td>
 			<td n:foreach="$columns as $column" class="grid-row-cell grid-data-cell grid-edited-cell">
 				{if $column->editable}
@@ -87,6 +96,7 @@
 		{foreach $rows as $row}
 		<tr n:attr="class => $iterator->isOdd() ? grid-row-odd : grid-row-even">
 			<td n:if="$control->hasActionForm()" n:attr="class => array(grid-row-cell, grid-action-checkbox, $control->isEditable() && $control->activeRowForm == $row[$primaryKey] ? 'grid-edited-cell')">{$control->assignCheckboxToRow($row[$primaryKey])}</td>
+			<td n:if="$control->hasLineNumber()" n:attr="class => array(grid-row-cell, grid-action-checkbox, $control->isEditable() && $control->activeRowForm == $row[$primaryKey] ? 'grid-edited-cell')">{++$lineNumber}.</td>
 			<td n:foreach="$subGrids as $subgrid" n:attr="class => array(grid-row-cell, $control->isEditable() && $control->activeRowForm == $row[$primaryKey] ? 'grid-edited-cell')">
 				{control $subgrid $row}
 			</td>
@@ -127,9 +137,9 @@
 			<td class="grid-row-cell" style="background-color:#FFF; font-size:16px;" colspan="{$colsCount}">{$control->messageNoRecords}</td>
 		</tr>
 		{/if}
-
-		<tr n:if="$control->hasSumRow()" class="grid-sum-row">
+		<tr n:if="$control->hasSumRow() && count($rows)" class="grid-sum-row">
 			<td n:if="$control->hasActionForm()" class="grid-row-cell grid-data-cell">Súčet</td>
+			<td n:if="$control->hasLineNumber()" class="grid-row-cell grid-data-cell"></td>
 			<td n:foreach="$columns as $column" class="grid-row-cell grid-data-cell">
 				{if $column->sum}
 					{${$column->name.'Sum'}}
@@ -140,7 +150,7 @@
 
 	</tbody>
 	<tfoot>
-		<tr>
+		<tr n:if="count($rows)">
 			<td colspan="{$colsCount}" class="grid-bottom">
 				<span n:if="$control->hasActionForm()" class="grid-action-box">
 						{$control['gridForm'][$control->name]['action']['action_name']->label}
@@ -171,9 +181,6 @@ $(window.selector).DatePicker({
 	date: new Date(),
 	mode: 'range',
 	calendars: 2,
-	onBeforeShow: function(){
-		//$(window.selector).DatePickerSetDate(new Date(), true);
-	},
 	onChange: function(formated){
 		$(window.selector).val(formated);
 	},
